--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@ AIRFLOW_URL=<IP Address or Hostname of the host machine>
 AIRFLOW_PORT=8080
 
 ### SSH Connection variables
-#AIRFLOW_CONN_MY_SSH_CONN=ssh://user@host:port?key_file=/home/airflow/.ssh/id_rsa&missing_host_key_policy=AutoAddPolicy&conn_name=my_ssh_conn
+AIRFLOW_CONN_MY_SSH_CONN=ssh://user@host:port?key_file=/home/airflow/.ssh/id_rsa&missing_host_key_policy=AutoAddPolicy&conn_name=my_ssh_conn
 
 ### Mysql Connection variables
-#AIRFLOW_CONN_MY_MYSQL_CONN=mysql://user:password@host:port/database_name?conn_name=my_mysql_conn
+AIRFLOW_CONN_MY_MYSQL_CONN=mysql://user:password@host:port/database_name?conn_name=my_mysql_conn
 
 ### Email Connection variables 
-#AIRFLOW_CONN_MY_EMAIL_CONN=smtp://user:password@smtp.gmail.com:587/?conn_name=my_email_conn
+AIRFLOW_CONN_MY_EMAIL_CONN=smtp://user:password@smtp.gmail.com:587/?conn_name=my_email_conn
 
 
 ### Jira variables
